fix: spacing

--- a/signUp.css
+++ b/signUp.css
@@ -95,7 +95,7 @@ small {
 
 @media (max-width: 578px){
 .signUp-img {
-	height: 360px;
+	height: 380px;
 }
 
 .signUp-area {
